Modified project settings

--- a/project.config
+++ b/project.config
@@ -4,3 +4,9 @@
 	action = inherit
 [access "refs/*"]
 	owner = group user/Oleh Kravchenko (kaa)
+[project]
+	description = Yocto BSP layer for the Out4 boards.
+[receive]
+	requireChangeId = false
+[plugin "reviewers-by-blame"]
+	maxReviewers = 5
