--- a/conf/machine/ev-imx280-nano-x-mb.conf
+++ b/conf/machine/ev-imx280-nano-x-mb.conf
@@ -1,3 +1,7 @@
+# conf/machine/ev-imx280-nano-x-mb.conf
+# Copyright (C) 2021 Oleh Kravchenko <oleg@kaa.org.ua>
+# Released under the MIT license (see LICENSE for the terms)
+
 require conf/machine/include/tune-cortexa7.inc
 
 SERIAL_CONSOLES ?= "115200;ttymxc0"
