--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -1,3 +1,7 @@
+# conf/layer.conf
+# Copyright (C) 2021 Oleh Kravchenko <oleg@kaa.org.ua>
+# Released under the MIT license (see LICENSE for the terms)
+
 # We have a conf and classes directory, add to BBPATH
 BBPATH .= ":${LAYERDIR}"
 
