--- a/conf/machine/o4-imx6ull-nano.conf
+++ b/conf/machine/o4-imx6ull-nano.conf
@@ -1,3 +1,7 @@
+# conf/machine/o4-imx6ull-nano.conf
+# Copyright (C) 2021 Oleh Kravchenko <oleg@kaa.org.ua>
+# Released under the MIT license (see LICENSE for the terms)
+
 require conf/machine/include/tune-cortexa7.inc
 
 SERIAL_CONSOLES ?= "115200;ttymxc0"
