Update, verify and fix latest build.
Add doc headers to machine configuration files.
Add vfat partition for U-Boot environment.
Update Linux to 5.10.87.
Update U-Boot to 2021.10.

Signed-off-by: Oleh Kravchenko <oleg@kaa.org.ua>

--- a/conf/machine/ev-imx280-nano-x-mb.conf
+++ b/conf/machine/ev-imx280-nano-x-mb.conf
@@ -2,6 +2,10 @@
 # Copyright (C) 2021 Oleh Kravchenko <oleg@kaa.org.ua>
 # Released under the MIT license (see LICENSE for the terms)
 
+#@TYPE: Machine
+#@NAME: ev-imx280-nano-x-mb
+#@DESCRIPTION: Motherboard for O4-iMX6ULL-NANO with DB9 UART, MicroSD, 2xUSB, Ethernet 10/100, power 5V, and GPIO.
+
 require conf/machine/include/tune-cortexa7.inc
 
 SERIAL_CONSOLES ?= "115200;ttymxc0"
