--- a/conf/machine/o4-imx6ull-nano.conf
+++ b/conf/machine/o4-imx6ull-nano.conf
@@ -2,6 +2,10 @@
 # Copyright (C) 2021 Oleh Kravchenko <oleg@kaa.org.ua>
 # Released under the MIT license (see LICENSE for the terms)
 
+#@TYPE: Machine
+#@NAME: o4-imx6ull-nano
+#@DESCRIPTION: Motherboard for O4-iMX6ULL-NANO with reset button, TTL 3.3V UART, MicroSD, 2xUSB, 2xEthernet 10/100, 2xRGB LEDs, CAN, RS485, power 6-15V, and GPIO.
+
 require conf/machine/include/tune-cortexa7.inc
 
 SERIAL_CONSOLES ?= "115200;ttymxc0"
